// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return variant when equal weight on 1,1,1 1`] = `
Object {
  "enabled": true,
  "name": "variant1",
  "params": Array [
    Object {
      "name": "p1",
      "type": "string",
      "value": "val1",
    },
  ],
}
`;

exports[`should return variant when equal weight on 1,1,1 2`] = `
Object {
  "enabled": true,
  "name": "variant2",
  "params": Array [
    Object {
      "name": "p1",
      "type": "string",
      "value": "val2",
    },
  ],
}
`;

exports[`should return variant when equal weight on 1,1,1 3`] = `
Object {
  "enabled": true,
  "name": "variant3",
  "params": Array [
    Object {
      "name": "p1",
      "type": "string",
      "value": "val3",
    },
  ],
}
`;

exports[`should return variant when equal weight on 33,33,33 1`] = `
Object {
  "enabled": true,
  "name": "variant1",
  "params": Array [
    Object {
      "name": "p1",
      "type": "string",
      "value": "val1",
    },
  ],
}
`;

exports[`should return variant when equal weight on 33,33,33 2`] = `
Object {
  "enabled": true,
  "name": "variant2",
  "params": Array [
    Object {
      "name": "p1",
      "type": "string",
      "value": "val2",
    },
  ],
}
`;

exports[`should return variant when equal weight on 33,33,33 3`] = `
Object {
  "enabled": true,
  "name": "variant3",
  "params": Array [
    Object {
      "name": "p1",
      "type": "string",
      "value": "val3",
    },
  ],
}
`;

exports[`should return variant when equal weight on 100,100,100 1`] = `
Object {
  "enabled": true,
  "name": "variant1",
  "params": Array [
    Object {
      "name": "p1",
      "type": "string",
      "value": "val1",
    },
  ],
}
`;

exports[`should return variant when equal weight on 100,100,100 2`] = `
Object {
  "enabled": true,
  "name": "variant2",
  "params": Array [
    Object {
      "name": "p1",
      "type": "string",
      "value": "val2",
    },
  ],
}
`;

exports[`should return variant when equal weight on 100,100,100 3`] = `
Object {
  "enabled": true,
  "name": "variant3",
  "params": Array [
    Object {
      "name": "p1",
      "type": "string",
      "value": "val3",
    },
  ],
}
`;
